Modify Find Service By Category
