# src/swagger.json
@@ -918,6 +918,49 @@
                     }
                 }
             }
+        },
+        "/services/category/{company_id}": {
+            "get": {
+                "tags": ["Services"],
+                "summary": "Find service by category",
+                "description": "Find service company by category",
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "name": "company_id",
+                        "in": "path",
+                        "required": true,
+                        "description": "Company id is required"
+                    },
+                    {
+                        "name": "category",
+                        "in": "query",
+                        "description": "Category name"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/Service"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Company not found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
         }
     },
     "components": {
